--- a/angular-frontend/src/app/tasks-list/tasks-list.component.html
+++ b/angular-frontend/src/app/tasks-list/tasks-list.component.html
@@ -1,6 +1,25 @@
-<h2>List of Tasks</h2>
-<ul>
-    <li *ngFor="let task of tasks">
-        {{ task.TaskName}} {{ task.Point }}
-    </li>
-</ul>
+<h2>List of Tasks for children</h2>
+
+<table class="table table-striped table-responsive-md">
+	<thead>
+		<tr>
+			<th scope="col">Task</th>
+			<th scope="col">Point</th>
+			<th scope="col">Done?</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<tr *ngFor="let task of tasks">
+			<td>
+				{{ task.TaskName}}
+			</td>
+			<td>
+				({{ task.Point }} pont)
+			</td>
+			<td>
+				<input class="form-check-input" type="checkbox" [checked]="task.Done" disabled>
+			</td>
+		</tr>
+	</tbody>
+</table>
