--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,2 +1,22 @@
 
+<nav class="navbar navbar-expand-sm ">
+  <a class="navbar-brand" href="#">Child motivator</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse"  id="navbarNav">
+  <ul class="navbar-nav   mr-auto">
+    <li class="nav-item">
+		<a routerLink="/tasks" routerLinkActive="active" ariaCurrentWhenActive="page"  class="nav-link">List</a>
+	</li>
+    <li class="nav-item">
+		<a routerLink="/points/add" routerLinkActive="active" ariaCurrentWhenActive="page"  class="nav-link">Give points</a>
+	</li>
+    <li class="nav-item">
+		<a routerLink="/points" routerLinkActive="active" ariaCurrentWhenActive="page"  class="nav-link">Leaderboard</a>
+	</li>
+  </ul>
+  </div>
+</nav>
+
 <router-outlet></router-outlet>
